# TheCorridor

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  TheCorridor.sdf  TheCorridor.sln
Data/: Title.txt  Tutorial.txt  item_data.xml  room_data.xml
Debug/: TheCorridor.ilk
TheCorridor/: AchievementComponent.cpp  AchievementComponent.h  BookCaseMiniGame.cpp  BookCaseMiniGame.h  ChandelierMiniGame.cpp  ChandelierMiniGame.h  ChessBoardMiniGame.cpp  ChessBoardMiniGame.h  Command.h  ConsoleWriter.cpp  ConsoleWriter.h  CorridorStringDefinitions.h  DataRepository.cpp  DataRepository.h  Definitions.cpp  Definitions.h  Event.cpp  ExamineCommand.cpp  ExamineCommand.h  GoCommand.cpp  GoCommand.h  IObserver.h  IgniteCommand.cpp  IgniteCommand.h  InputHandler.cpp  InputHandler.h  InvestigateCommand.cpp  InvestigateCommand.h  Item.cpp  Item.h  ItemAcquiredEvent.cpp  ItemAcquiredEvent.h  ItemBuilder.cpp  ItemBuilder.h  ItemsComponent.cpp  ItemsComponent.h  LookCommand.cpp  LookCommand.h  MiniGame.cpp  MiniGame.h  (+56 more)
TheCorridor/Debug/: CL.read.1.tlog  CL.write.1.tlog  TheCorridor.lastbuildstate  TheCorridor.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb  vc140.idb  xmlparser2.obj.enc
TheCorridor/Debug/TheCorridor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TheCorridor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ipch/THECORRIDOR-e607545b/: THECORRIDOR-1546af11.ipch
ipch/thecorridor-b8727cdd/: thecorridor-13cb171.ipch
